--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "redux-todo-app",
+  "name": "redux-todo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "network": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -13,16 +12,15 @@
     "@reduxjs/toolkit": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "redux": "^4.2.1"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
-    "vite": "^4.2.0"
+    "vite": "^4.1.0"
   }
 }
